apps/pihole/pihole-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: pihole
  labels:
    app.kubernetes.io/name: pihole
    app.kubernetes.io/part-of: day2-services
  annotations:
    argocd.argoproj.io/sync-wave: "0"
